src/user.css
/* ... */
.main-yourLibraryX-navLink[href="/"] svg,
.main-yourLibraryX-navLink[aria-label="Home"] svg,
button[aria-label="Home"] svg {
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/home-outline.svg");
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/home-outline.svg");
  background-color: var(--spice-subtext) !important;
}
.main-yourLibraryX-navLink[aria-label="Home"].active svg,
.main-yourLibraryX-navLink[href="/"].active svg,
.main-globalNav-navLinkActive[aria-label="Home"] svg {
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/home-filled.svg");
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/home-filled.svg");
}

.main-yourLibraryX-navLink[href="/search"] svg {
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/search.svg");
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/search.svg");
  background-color: var(--spice-subtext) !important;
}
.main-yourLibraryX-navLink[href="/search"].active svg {
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/search-filled.svg");
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/search-filled.svg");
  background-color: var(--spice-accent) !important;
}

.main-yourLibraryX-navLink[href="/lyrics-plus"] > svg {
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/slide-text-outline.svg");
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/slide-text-outline.svg");
  background-color: var(--spice-subtext) !important;
}
.main-yourLibraryX-navLink[href="/lyrics-plus"].active > svg {
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/slide-text.svg");
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/slide-text.svg");
  background-color: var(--spice-accent) !important;
}

.main-yourLibraryX-navLink[href="/marketplace"] > svg,
.main-globalNav-link-icon[aria-label="Marketplace"] svg {
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/cart-outline.svg");
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/cart-outline.svg");
  background-color: var(--spice-subtext) !important;
  scale: 1.25;
}

.main-yourLibraryX-navLink[href="/marketplace"].active > svg,
.main-globalNav-link-icon.main-globalNav-navLinkActive[aria-label="Marketplace"]
  svg {
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/cart.svg");
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/cart.svg");
  background-color: var(--spice-text) !important;
  scale: 1.25;
}

button[aria-label="Browse"] svg {
  display: none;
  -webkit-mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/compass_outline.svg");
  mask-image: url("https://sanooj.is-a.dev/better-bloom/assets/icons/compass_outline.svg");
  background-color: var(--spice-subtext) !important;
  scale: 1.25;
}

.main-globalNav-searchInputSection .uozPfgVVoIwfTp8aGiu1 svg {
  background-color: var(--spice-text) !important;
}

.main-yourLibraryX-navLink[href="/marketplace"].active > svg {
  background-color: var(--spice-accent) !important;
}

.main-contextMenu-menuItemButton .egE6UQjF_UUoCzvMxREj {
  display: none; /* hides report button from contextMenu */
}

.main-nowPlayingView-contextItemInfo {
  padding-right: 0.25rem;
}

.main-topBar-searchBar {
  position: relative;
  min-width: 16rem;
}

/* Right sidebar */

.main-buddyFeed-header {
  min-height: 42px !important;
  height: 42px;
}

.main-buddyFeed-scrollBarContainer {
  padding-top: 4rem !important;
}

.main-buddyFeed-actions > * {
  color: var(--spice-text);
}

.main-buddyFeed-content > div:has(.main-buddyFeed-header) {
  position: fixed;
  width: 100%;
  height: fit-content;
  backdrop-filter: blur(var(--blur-radius));
  background-color: rgba(var(--spice-rgb-card), 0.5) !important;
  z-index: 10;
  top: -1px;
  left: 0;
}

.main-trackInfo-contentWrapper > *,
*:hover,
*:focus {
  text-decoration: none !important;
}

/* Beautiful Lyrics */

.BeautifulLyricsBackground-Container {
  opacity: var(--beautiful-lyrics-bg-opacity);
  filter: saturate(var(--beautiful-lyrics-bg-saturation))
    brightness(var(--beautiful-lyrics-bg-brightness))
    contrast(var(--beautiful-lyrics-bg-contrast)) !important;
}

.Fullscreen .BeautifulLyricsBackground-Container {
  opacity: 1;
}

#BeautifulLyricsFullscreenButton {
  color: var(--spice-subtext) !important;
}

button:has(.LyricsPageIcon) {
  margin-right: 0;
}

.lyrics-background-container::before {
  position: absolute;
  content: "";
  height: 100%;
  width: 100%;
  background-color: rgba(var(--spice-rgb-main), 0.25);
  z-index: 10;
  backdrop-filter: brightness(0.75);
}

.BeautifulLyricsPage.Fullscreen .Content .PlayPanel {
  display: grid !important;
  padding-top: 0 !important;
  align-content: center;
}

.main-yourLibraryX-navItem > a {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 20px;
  height: 40px;
}

.main-confirmDialog-container {
  background-color: transparent !important;
}

.marketplace-add-snippet-btn {
  bottom: 3rem;
}

div[data-testid="hpto-parent-container"] {
  padding-top: 0 !important;
}

/* Transparent Windows Controls */
body:not(.Fullscreen)::after {
  content: "";
  position: absolute;
  right: 0;
  z-index: 999;
  backdrop-filter: brightness(2.12);
  width: var(--control-width, 0);
  height: var(--control-height, 0);
}
/* ... */

